@@ -1,4 +1,4 @@
-/* generated from w3centities.ent Fri Jan 18 03:24:08 2008 */
+/* generated from w3centities.ent Wed Jul 30 22:28:13 2008 */
 
 typedef struct ENTITY { const char *name; long c; } Entity;
 
@@ -239,7 +239,7 @@ static Entity entities[] = {
   { "Lcaron", 0x0013D },
   { "Lcedil", 0x0013B },
   { "Lcy", 0x0041B },
-  { "LeftAngleBracket", 0x02329 },
+  { "LeftAngleBracket", 0x027E8 },
   { "LeftArrowBar", 0x021E4 },
   { "LeftArrowRightArrow", 0x021C6 },
   { "LeftCeiling", 0x02308 },
@@ -370,9 +370,9 @@ static Entity entities[] = {
   { "Otimes", 0x02A37 },
   { "Ouml", 0x000D6 },
   { "OverBar", 0x000AF },
-  { "OverBrace", 0x0FE37 },
+  { "OverBrace", 0x023DE },
   { "OverBracket", 0x023B4 },
-  { "OverParenthesis", 0x0FE35 },
+  { "OverParenthesis", 0x023DC },
   { "PHgr", 0x003A6 },
   { "PSgr", 0x003A8 },
   { "PartialD", 0x02202 },
@@ -413,7 +413,7 @@ static Entity entities[] = {
   { "Rfr", 0x0211C },
   { "Rgr", 0x003A1 },
   { "Rho", 0x003A1 },
-  { "RightAngleBracket", 0x0232A },
+  { "RightAngleBracket", 0x027E9 },
   { "RightArrowBar", 0x021E5 },
   { "RightArrowLeftArrow", 0x021C4 },
   { "RightCeiling", 0x02309 },
@@ -513,9 +513,9 @@ static Entity entities[] = {
   { "Ugr", 0x003A5 },
   { "Ugrave", 0x000D9 },
   { "Umacr", 0x0016A },
-  { "UnderBrace", 0x0FE38 },
+  { "UnderBrace", 0x023DF },
   { "UnderBracket", 0x023B5 },
-  { "UnderParenthesis", 0x0FE36 },
+  { "UnderParenthesis", 0x023DD },
   { "Union", 0x022C3 },
   { "UnionPlus", 0x0228E },
   { "Uogon", 0x00172 },
@@ -1228,9 +1228,9 @@ static Entity entities[] = {
   { "laemptyv", 0x029B4 },
   { "lagran", 0x02112 },
   { "lambda", 0x003BB },
-  { "lang", 0x02329 },
+  { "lang", 0x027E8 },
   { "langd", 0x02991 },
-  { "langle", 0x02329 },
+  { "langle", 0x027E8 },
   { "lap", 0x02A85 },
   { "laquo", 0x000AB },
   { "larr", 0x02190 },
@@ -1246,7 +1246,7 @@ static Entity entities[] = {
   { "latail", 0x02919 },
   { "late", 0x02AAD },
   { "lbarr", 0x0290C },
-  { "lbbrk", 0x02997 },
+  { "lbbrk", 0x02772 },
   { "lbrace", 0x0007B },
   { "lbrack", 0x0005B },
   { "lbrke", 0x0298B },
@@ -1596,7 +1596,7 @@ static Entity entities[] = {
   { "pfr", 0x1D52D },
   { "pgr", 0x003C0 },
   { "phgr", 0x003C6 },
-  { "phi", 0x003D5 },
+  { "phi", 0x003C6 },
   { "phiv", 0x003C6 },
   { "phmmat", 0x02133 },
   { "phone", 0x0260E },
@@ -1669,10 +1669,10 @@ static Entity entities[] = {
   { "racute", 0x00155 },
   { "radic", 0x0221A },
   { "raemptyv", 0x029B3 },
-  { "rang", 0x0232A },
+  { "rang", 0x027E9 },
   { "rangd", 0x02992 },
   { "range", 0x029A5 },
-  { "rangle", 0x0232A },
+  { "rangle", 0x027E9 },
   { "raquo", 0x000BB },
   { "rarr", 0x02192 },
   { "rarrap", 0x02975 },
@@ -1690,7 +1690,7 @@ static Entity entities[] = {
   { "ratio", 0x02236 },
   { "rationals", 0x0211A },
   { "rbarr", 0x0290D },
-  { "rbbrk", 0x02998 },
+  { "rbbrk", 0x02773 },
   { "rbrace", 0x0007D },
   { "rbrack", 0x0005D },
   { "rbrke", 0x0298C },
